# modern-beta-rs

./: .gitignore  Cargo.toml  mb-tray.example.toml
.github/workflows/: build.yml  ci.yml  release.yml
crates/mb-api/: Cargo.toml  README.md
crates/mb-api/src/: client.rs  error.rs  lib.rs  model.rs
crates/mb-tray/: Cargo.toml
crates/mb-tray/src/: bin.rs  config.rs  error.rs  state.rs  tray.rs  window.rs  worker.rs
crates/mb-tray/src/ui/: client.rs  macos.rs  mod.rs  window.rs
crates/mb-tray/src/ui/views/: lookup.rs  search.rs
crates/mb-tray/stubs/: default.config.toml
crates/mb-ui/: Cargo.toml
crates/mb-ui/src/: main.rs
crates/mb-ui/src/views/: search.rs
src/: api.rs  error.rs  event.rs  main.rs  state.rs  tray.rs  worker.rs
src/api/: client.rs  mod.rs  model.rs
