[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
authors = ["Zak Nesler"]
repository = "https://github.com/zaknesler/mb-tray"
license = "MIT"

[package]
name = "mb-tray"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["crates/*"]

[dependencies]
modern-beta-api = { path = "./crates/mb-api" }
figment = { version = "0.10.19", features = ["toml"] }
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
tao = "0.35.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tray-icon = "0.24.1"

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
