[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
authors = ["Zak Nesler"]
repository = "https://github.com/zaknesler/modern-beta-rs"
license = "MIT"

[profile.release]
strip = true
opt-level = "s"
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
  "dpkg --add-architecture arm64",
  "apt-get update",
  "apt-get install -y libglib2.0-dev:arm64 pkg-config"
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
  "dpkg --add-architecture armhf",
  "apt-get update",
  "apt-get install -y libglib2.0-dev:armhf pkg-config"
]
