[package]
name = "mb-tray"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
mb-ui = { path = "../mb-ui" }
modern-beta-api = { path = "../mb-api" }
figment = { version = "0.10.19", features = ["toml"] }
image = "0.25.10"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tray-icon = "0.24.1"

[[bin]]
name = "mb-tray"
path = "src/bin.rs"
